# shockk-os

./: .gitignore  CMakeLists.txt  Makefile  README.md  bootsector.asm  cpu.h  gdt.c  gdt.h  idt.asm  idt.c  idt.h  irq.h  isr.asm  isr.c  link.ld  loader_entry.old.c  main.c  main.cpp  pic.c  pic.h  ports.c  ports.h  screen.c  screen.h  syscall.c  tss.c  user.asm
boot/: Makefile  bootsector.asm  grub.cfg  stage0.asm  stage1.asm
bootloader/: Makefile  bootsector.asm
bootsector/: Makefile
crt0/: Makefile
crt0/src/: crt0.c
doc/: ext2.txt
include/: cpu.h  gdt.h  idt.h  interrupts.h  itoa.h  kernel.h  keyboard.h  pic.h  ports.h  screen.h  stdint.h  stdio.h  stdlib.h  syscall.h  syscalls.h
include/kernel/: Pager.h  a20.h  ata.h  cpu.h  elf.h  ext2.h  gdt.h  idt.h  isr.h  itoa.h  kb.h  maybe.h  mbr.h  memory.h  new.h  page_allocator.h  page_allocator_test.h  pager.h  panic.h  pci.h  pit.h  ports.h  screen.h  state.h  syscall.h  task.h  tss.h  user.h
include/kernel/screen/: elf.h
kernel/: Makefile  a20.c  ata.c  ext2.cpp  gdt.c  gdt.cpp  idt.c  idt.cpp  isr.asm  isr.c  isr.cpp  itoa.c  itoa.cpp  kb.cpp  kernel_entry.cpp  link.ld  main.c  mbr.cpp  memory.c  page_allocator.c  pager.c  pager.cpp  panic.c  pci.c  pic.c  pit.c  ports.c  screen.c  screen.cpp  state.cpp  syscall.c  syscall.cpp  task.asm  task.cpp  task_entry.cpp  tss.c  tss.cpp  user.asm  user_entry.cpp
lib/: gdt.asm  gdt.c  idt.asm  idt.c  interrupts.c  itoa.c  kernel.c  keyboard.c  pic.c  ports.c  screen.c  syscall.c  syscalls.c
libc/: Makefile  crt0.c  syscalls.c
libc/include/: alloca.h  assert.h  byteswap.h  ctype.h  dirent.h  endian.h  errno.h  fcntl.h  fnmatch.h  getopt.h  glob.h  grp.h  inttypes.h  libgen.h  limits.h  malloc.h  netdb.h  paths.h  poll.h  pwd.h  setjmp.h  signal.h  stdint.h  stdio.h  stdlib.h  string.h  strings.h  termios.h  time.h  unistd.h
libc/include/arpa/: inet.h
libc/include/net/: if.h
libc/include/netinet/: in.h
libc/src/: crt0.c  ctype.c  dirent.c  fnmatch.c  getopt.c  glob.c  libgen.c  malloc.c  poll.c  pwd.c  setjmp.c  signal.c  stdio.c  stdlib.c  string.c  strings.c  syscalls.c  termios.c  unistd.c
libm/: Makefile
loader/: Makefile  link.ld  loader_entry.cpp  multiboot.asm
mbr/: Makefile  bootstrap.asm
patch/: binutils-2.27-shk.diff  gcc-6.2.0-shk.diff  newlib-2.4.0-shk.diff
scripts/: partition_image.sh
src/: ata.c  bootsector.asm  infosector.asm  isr.c  kernel_entry.c  memory.c  page_allocator.c  page_allocator_test.c  pager.c  panic.c  panic_dummy.c  pci.c  pit.c  user.asm  user_entry.c
src/bootsector/: CMakeLists.txt  bootsector.asm
src/kernel/: CMakeLists.txt  a20.cpp  ata.cpp  isr.cpp  kernel_entry.c  kernel_entry.cpp  memory.cpp  ports.cpp  tss.cpp  user_entry.cpp
src/loader/: CMakeLists.txt  Pager.cpp  ata.cpp  loader_entry.c  loader_entry.cpp  page_allocator.cpp  pager.cpp
test/: Makefile  cat.c  echo.c  hello.c  loop.c  one.c  two.c
toolchain/: Makefile  shk-binutils-2.31.patch  shk-gcc-8.2.0.patch  shk-newlib-3.0.0.patch
usr/: Makefile  shk-dash-0.5.10.patch
(+15 files in other folders)
